Fix for popover not showing

--- a/features/apimgt/org.wso2.carbon.apimgt.store.feature/src/main/resources/store/site/themes/wso2/css/custom.css
+++ b/features/apimgt/org.wso2.carbon.apimgt.store.feature/src/main/resources/store/site/themes/wso2/css/custom.css
@@ -552,7 +552,9 @@ ul.product-tags {
     z-index: 500;
     padding-bottom: 7px;
 }
-
+.help_popup{
+    display: block;
+}
 
 /*========================*/
 
